--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ dependencyManagement {
     }
 }
 
-ext ['spring-security.version'] = '5.3.1.RELEASE' // Pinned to resolve CVE-2019-17195
+ext ['spring-security.version'] = '5.3.2.RELEASE' // Pinned to resolve CVE-2019-17195 and CVE-2020-5407/8
 
 dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -124,7 +124,7 @@ dependencies {
     implementation 'org.springframework:spring-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
 
-    implementation 'org.apache.camel:camel-spring-boot:3.0.1'
+    implementation 'org.apache.camel:camel-spring-boot:3.2.0'
 
     implementation 'net.logstash.logback:logstash-logback-encoder:6.3'
     implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.6.1-BETA'
