DT-868 security fixes (#175)
* DT-868 Fix/mitigate security vulnerabilities

* DT-868 Use latest versions

* DT-868 These were resolved by spring boot 2.3.0.RELEASE requiring tomcat-embed-core-9.0.35

* DT-868 Point to correct CVE that has been suppressed

* DT-868 Camel isn't actually used

* DT-868 Switch to Spring graceful shutdown

* DT-868 Localstack not working locally, rollback to knwo good version

* DT-868 Updates required due to SPring Boot 2.3.0.RELEASE

* DT-868 Use the version of hibernate imported by spring data jpa

* DT-868 Correct graceful shutdown config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -77,8 +77,8 @@ spring:
   codec:
     max-in-memory-size: 10MB
 
-graceful:
-  shutdown.enabled: false
+server:
+  shutdown: graceful
 
 sqs:
   provider: aws
