--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
     id 'groovy'
-    id 'org.springframework.boot' version '2.2.7.RELEASE'
+    id 'org.springframework.boot' version '2.3.0.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'org.owasp.dependencycheck' version '5.3.2.1'
     id 'com.github.ben-manes.versions' version '0.28.0'
@@ -95,7 +95,7 @@ dependencyManagement {
     }
 }
 
-ext ['spring-security.version'] = '5.3.1.RELEASE' // Pinned to resolve CVE-2019-17195
+ext ['spring-security.version'] = '5.3.2.RELEASE' // Pinned to resolve CVE-2018-1258
 
 dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -106,10 +106,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
 
     runtime 'com.h2database:h2:1.4.200'
-    runtime 'org.flywaydb:flyway-core:6.4.1'
+    runtime 'org.flywaydb:flyway-core:6.4.2'
     runtime 'org.postgresql:postgresql:42.2.12'
-
-    implementation 'org.hibernate:hibernate-java8'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -124,8 +122,6 @@ dependencies {
     implementation 'org.springframework:spring-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
 
-    implementation 'org.apache.camel:camel-spring-boot:3.0.1'
-
     implementation 'net.logstash.logback:logstash-logback-encoder:6.3'
     implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.6.1-BETA'
     implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.6.1-BETA'
@@ -135,10 +131,11 @@ dependencies {
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
-    implementation 'com.sun.xml.bind:jaxb-impl:3.0.0-M2'
-    implementation 'com.sun.xml.bind:jaxb-core:3.0.0-M2'
+    implementation 'com.sun.xml.bind:jaxb-impl:3.0.0-M3'
+    implementation 'com.sun.xml.bind:jaxb-core:3.0.0-M3'
     implementation 'javax.activation:activation:1.1.1'
     implementation 'javax.transaction:javax.transaction-api:1.3'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
@@ -161,7 +158,7 @@ dependencies {
     testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.17.0'
     testImplementation 'com.github.tomakehurst:wiremock-standalone:2.26.3'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
-    testImplementation 'org.testcontainers:localstack:1.14.1'
+    testImplementation 'org.testcontainers:localstack:1.13.0'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testImplementation 'io.jsonwebtoken:jjwt:0.9.1'
