SDI-142: 🔒️ Fix security issues by bumping versions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@3.12
+  hmpps: ministryofjustice/hmpps@3.14
 jobs:
   validate:
     executor:
@@ -51,6 +51,7 @@ workflows:
       - hmpps/deploy_env:
           name: deploy_dev
           env: "dev"
+          jira_update: true
           context:
             - hmpps-common-vars
           filters:
@@ -68,6 +69,8 @@ workflows:
       - hmpps/deploy_env:
           name: deploy_preprod
           env: "preprod"
+          jira_update: true
+          jira_env_type: staging
           context:
             - whereabouts-api-preprod
             - hmpps-common-vars
@@ -80,6 +83,8 @@ workflows:
       - hmpps/deploy_env:
           name: deploy_prod
           env: "prod"
+          jira_update: true
+          jira_env_type: production
           slack_notification: true
           context: 
             - whereabouts-api-prod
